##########################
# Setup.py Configuration #
##########################
[metadata]
name = bel_resources
version = 0.0.3-dev
description = Utilities for BEL resource files.
long_description = file: README.rst

license = MIT License
license_file = LICENSE

url = https://github.com/cthoyt/bel-resources
download_url = https://github.com/cthoyt/bel-resources/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/bel-resources/issues
    Source Code = https://github.com/cthoyt/bel-resources

author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
keywords =
    Biological Expression Language
    BEL
    Semantic Web
    Networks Biology
    Systems Biology
    Ontologies

[options]
install_requires =
    requests
    requests_file
    multisplitby

python_requires = >=3.5
tests_require =
    tox
packages = find:
package_dir =
    = src
zip_safe = true

[options.packages.find]
where = src

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bel-resources

[coverage:paths]
source =
    src/bel_resources
    .tox/*/lib/python*/site-packages/bel_resources

[coverage:report]
show_missing = True
